# Floppy80

./: CMakeLists.txt  Defines.h  File.c  README.md  Trace.c  Vars.c  crc.c  crc.h  datetime.h  fdc.c  fdc.h  fdc.pio  file.h  hfe.c  hw_config.c  main.c  sd_core.c  sd_core.h  system.c  system.h
KiCAD/Card Edge/: Card Edge.rar  Card-B_Cu.gbr  Card-B_Mask.gbr  Card-B_Paste.gbr  Card-B_Silkscreen.gbr  Card-Edge_Cuts.gbr  Card-F_Cu.gbr  Card-F_Mask.gbr  Card-F_Paste.gbr  Card-F_Silkscreen.gbr  Card-NPTH.drl  Card-PTH.drl  Card-cache.lib  Card-job.gbrjob  Card.kicad_pcb  Card.kicad_pcb-bak  Card.kicad_prl  Card.kicad_pro  Card.kicad_sch  Card.net  Card.pro  Card.sch  Card.sch-bak  fp-info-cache
KiCAD/Card Edge/Card.pretty/: Card _Edge_20P.kicad_mod
KiCAD/FDC Pico/: 8051ICE  8051ICE.xml  FDC Complete.xlsx  FDC Pico.rar  FDC-B_Cu.gbr  FDC-B_Mask.gbr  FDC-B_Paste.gbr  FDC-B_Silkscreen.gbr  FDC-Edge_Cuts.gbr  FDC-F_Cu.gbr  FDC-F_Mask.gbr  FDC-F_Paste.gbr  FDC-F_Silkscreen.gbr  FDC-NPTH-drl_map.ps  FDC-NPTH.drl  FDC-PTH-drl_map.ps  FDC-PTH.drl  FDC-cache.lib  FDC-job.gbrjob  FDC-rescue.lib  FDC.csv  FDC.kicad_pcb  FDC.kicad_pcb-bak  FDC.kicad_prl  FDC.kicad_pro  FDC.kicad_sch  FDC.net  FDC.pro  FDC.sch  FDC.sch-bak  FDC.xlsx  FDC.xml  MCU_Kinetis.dcm  MCU_NXP_Kinetis.dcm  TPD2E001DZDR.dcm  fp-info-cache  fp-lib-table  sym-lib-table
KiCAD/FDC Pico/FDC.pretty/: TE_MATE-N-LOK_350211-1_1x04_P5.08mm_Horizontal.kicad_mod
lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/ff14a/source/: ffconf.h
lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/sd_driver/: spi.c  spi.h
lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/src/: my_debug.c
lib/no-OS-FatFS-SD-SPI-RPi-Pico/doc/: updates.txt
